# CMasher

./: .appveyor.yml  .codecov.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION  LICENSE  MANIFEST.in  README.rst  cmasher.m  conftest.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: cmap_request.md  feature_request.md
.github/workflows/: lint_python.yml  test.yml
cmasher/: __init__.py  __version__.py  _handlercolorpolycollection.py  _known_cmap_types.py  app_usage.py  cli_tools.py  cm.py  cm.pyi  utils.py
cmasher/colormaps/: cm_amber.txt  cm_amethyst.txt  cm_apple.npy  cm_apple.txt  cm_arctic.txt  cm_bubblegum.npy  cm_bubblegum.txt  cm_chroma.txt  cm_copper.npy  cm_copper.txt  cm_dusk.npy  cm_dusk.txt  cm_eclipse.txt  cm_ember.npy  cm_ember.txt  cm_fall.npy  cm_fall.txt  cm_flamingo.txt  cm_freeze.npy  cm_freeze.txt  cm_fusion.txt  cm_gem.npy  cm_gem.txt  cm_ghostlight.npy  cm_ghostlight.txt  cm_gothic.npy  cm_gothic.txt  cm_guppy.npy  cm_guppy.txt  cm_heat.txt  cm_horizon.npy  cm_horizon.txt  cm_iceburn.npy  cm_iceburn.txt  cm_infinity.npy  cm_jungle.npy  cm_jungle.txt  cm_lavender.txt  cm_neon.npy  cm_neutral.npy  (+29 more)
cmasher/colormaps/amber/: amber.jscm  amber.py
cmasher/colormaps/amethyst/: amethyst.jscm  amethyst.py  amethyst_8bit.txt  amethyst_hex.txt
cmasher/colormaps/apple/: apple.jscm  apple.py  apple_8bit.txt  apple_hex.txt
cmasher/colormaps/arctic/: arctic.py  arctic_8bit.txt
cmasher/colormaps/aurora/: aurora.jscm  aurora.py  aurora_8bit.txt
cmasher/colormaps/bubblegum/: bubblegum.jscm  bubblegum.py  bubblegum_8bit.txt
cmasher/colormaps/chroma/: chroma.jscm  chroma.py  chroma_8bit.txt  chroma_hex.txt
cmasher/colormaps/copper/: copper.jscm  copper.py  copper_8bit.txt  copper_hex.txt
cmasher/colormaps/cosmic/: cosmic.jscm  cosmic.py  cosmic_hex.txt  cosmic_norm.txt
cmasher/colormaps/dusk/: dusk.jscm  dusk.py  dusk_8bit.txt  dusk_norm.txt
cmasher/colormaps/eclipse/: eclipse.jscm  eclipse.py  eclipse_8bit.txt  eclipse_hex.txt
cmasher/colormaps/ember/: ember.jscm  ember.py  ember_8bit.txt  ember_norm.txt
cmasher/colormaps/emerald/: emerald.jscm  emerald.py  emerald_8bit.txt  emerald_hex.txt
cmasher/colormaps/emergency/: emergency.jscm  emergency.py  emergency_8bit.txt  emergency_hex.txt
cmasher/colormaps/fall/: fall.jscm  fall.py  fall_8bit.txt  fall_hex.txt
cmasher/colormaps/flamingo/: flamingo.jscm  flamingo.py  flamingo_8bit.txt  flamingo_hex.txt  flamingo_norm.txt
cmasher/colormaps/freeze/: freeze.jscm  freeze.py  freeze_8bit.txt
cmasher/colormaps/fusion/: fusion.jscm  fusion.py  fusion_blue.jscm  fusion_red.jscm
cmasher/colormaps/gem/: gem.jscm  gem.py  gem_8bit.txt  gem_hex.txt
cmasher/colormaps/ghostlight/: ghostlight.py  ghostlight_hex.txt
cmasher/colormaps/gothic/: gothic.jscm  gothic.py  gothic_8bit.txt  gothic_hex.txt
cmasher/colormaps/guppy/: guppy.jscm  guppy.py  guppy_8bit.txt  guppy_hex.txt  guppy_norm.txt
cmasher/colormaps/heat/: heat.jscm  heat.py  heat_8bit.txt  heat_hex.txt  heat_norm.txt
cmasher/colormaps/holly/: holly.jscm  holly.py
cmasher/colormaps/horizon/: horizon.jscm  horizon.py  horizon_8bit.txt  horizon_hex.txt
cmasher/colormaps/iceburn/: iceburn.jscm  iceburn.py  iceburn_8bit.txt  iceburn_blue.jscm  iceburn_orange.jscm
cmasher/colormaps/infinity/: infinity.py  infinity_8bit.txt
cmasher/colormaps/jungle/: jungle.py  jungle_hex.txt
cmasher/colormaps/lavender/: lavender.jscm  lavender.py
cmasher/colormaps/lilac/: lilac.jscm  lilac.py  lilac_8bit.txt
cmasher/colormaps/neon/: neon.jscm  neon.py  neon_norm.txt
cmasher/colormaps/neutral/: neutral.jscm  neutral.py  neutral_8bit.txt  neutral_hex.txt
cmasher/colormaps/nuclear/: nuclear.jscm  nuclear.py  nuclear_8bit.txt
cmasher/colormaps/ocean/: ocean.jscm  ocean.py  ocean_8bit.txt  ocean_hex.txt
cmasher/colormaps/pepper/: pepper.jscm  pepper.py  pepper_hex.txt
cmasher/colormaps/pride/: pride.jscm  pride.py
cmasher/colormaps/primary/: primary.jscm  primary.py
cmasher/colormaps/prinsenvlag/: prinsenvlag.jscm  prinsenvlag.py
cmasher/colormaps/rainforest/: rainforest.jscm  rainforest.py  rainforest_8bit.txt  rainforest_norm.txt
cmasher/colormaps/redshift/: redshift.jscm  redshift.py  redshift_8bit.txt  redshift_blue.jscm  redshift_red.jscm
cmasher/colormaps/sapphire/: sapphire.jscm  sapphire.py  sapphire_8bit.txt  sapphire_hex.txt
cmasher/colormaps/savanna/: savanna.jscm  savanna.py
cmasher/colormaps/seasons/: seasons.jscm  seasons.py  seasons_8bit.txt  seasons_hex.txt  seasons_norm.txt
cmasher/colormaps/seaweed/: seaweed.jscm  seaweed.py  seaweed_8bit.txt
cmasher/colormaps/sepia/: sepia.jscm  sepia.py  sepia_8bit.txt  sepia_hex.txt
cmasher/colormaps/sunburst/: sunburst.jscm  sunburst.py  sunburst_8bit.txt  sunburst_hex.txt
cmasher/colormaps/swamp/: swamp.jscm  swamp.py  swamp_8bit.txt  swamp_hex.txt
cmasher/colormaps/torch/: torch.py
cmasher/colormaps/toxic/: toxic.jscm  toxic.py  toxic_8bit.txt  toxic_hex.txt  toxic_norm.txt
cmasher/colormaps/tree/: tree.jscm  tree.py  tree_8bit.txt  tree_hex.txt  tree_norm.txt
cmasher/colormaps/tropical/: tropical.jscm  tropical.py  tropical_hex.txt
cmasher/colormaps/viola/: viola.jscm  viola.py  viola_8bit.txt
cmasher/colormaps/voltage/: voltage.jscm  voltage.py  voltage_8bit.txt  voltage_hex.txt  voltage_norm.txt
cmasher/tests/: test_utils.py
cmasher/tests/data/: cm_hex.txt  (+2 more)
docs/: Makefile  make.bat  requirements.in  requirements.txt  requirements_docs.txt
docs/source/: community_guidelines.rst  conf.py  docutils.conf  index.rst
joss_paper/: paper.bib  paper.md
requirements/: dev.txt  docs.txt  min_constraints.txt  typecheck.txt
scripts/: check_dist.py  generate_cm_stub.py  generate_known_cmap_types.py  pin_requirements.py
src/cmasher/: __init__.py  __version__.py  _handlercolorpolycollection.py  app_usage.py  cli_tools.py  cm.py  utils.py
tests/: test_utils.py
tests/data/: cm_cyclic.txt
(+275 files in other folders)
