[metadata]
name = cmasher
author = Ellert van der Velden
author_email = ellert_vandervelden@outlook.com
description = Scientific colormaps for making accessible, informative and 'cmashing' plots
long_description = file: README.rst
url = https://cmasher.readthedocs.io
project_urls =
    Documentation=https://cmasher.readthedocs.io
    Source Code=https://github.com/1313e/CMasher
license = BSD-3
platforms =
    Windows
    Mac OS-X
    Linux
    Unix
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities
    Framework :: Matplotlib
keywords = cmasher perceptually uniform sequential colormaps plotting python visualization
version = 1.6.3

[options]
python_requires = >=3.6, <4
packages = find:
package_dir = cmasher=cmasher
include_package_data = True
install_requires =
    colorspacious>=1.1.0
    e13tools>=0.9.4
    matplotlib>=2.2.4
    numpy>=1.16.0
zip_safe = False

[options.entry_points]
console_scripts =
    cmr = cmasher.cli_tools:main

[bdist_wheel]
universal = 0

[tool:pytest]
addopts = --mpl --flake8 -v --cov --cov-config=setup.cfg --cov-report=term-missing
testpaths = ./cmasher
flake8-ignore =
    E226
    F401
    F403
    W503
    W504

[coverage:run]
include = cmasher/*
omit =
    cmasher/__version__*
    cmasher/app_usage.py
